# Ominix-TTS

./: .gitattributes  .gitignore  README.md  install_readme.txt  introduction.md  pyproject.toml  requirements.txt  setup.py
MOTTS/TTS_infer_pack/: TTS.py
MOTTS/f5_tts/model/: __init__.py
MOTTS/f5_tts/model/backbones/: dit.py
OminixTTS/: TTS.py  TextPreprocessor.py  download.py  inference.py  pipeline.py  text_segmentation_method.py  voice_clone.py
OminixTTS/TTS_infer_pack/: TTS.py  text_segmentation_method.py
OminixTTS/f5_tts/model/: __init__.py
OminixTTS/f5_tts/model/backbones/: dit.py
OminixTTS/text/: chinese2.py
OminixTTS/tools/: my_utils.py
examples/: inference.py  test_with_reference.py  test_without_reference.py
ominix_tts/: TextPreprocessor.py  pipeline.py  process_ckpt.py  voice_clone.py
ominix_tts/audio_synthesis/: audio_processor.py
ominix_tts/module/: models.py
ominix_tts/reference_processor/: processor.py
ominix_tts/text/: __init__.py  chinese.py  english.py
ominix_tts/text_processor/: chinese2.py  cleaner.py  processor.py
