[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Ominix-TTS"
version = "0.1.0"
description = "A short description of your package"
readme = "README.md"
authors = [{name = "Hongbing Li", email = "cshbli@hotmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [    
    "numpy>=1.21.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cshbli/Ominix-TTS"